--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#about me">About Me</a></li>
+								<li><a href="#about-me">About Me</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -42,7 +42,7 @@
 					<div id="main">
 
 						<!-- About Me -->
-							<article id="about me">
+							<article id="about-me">
 								<h2 class="major">About me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Born and raised in Toronto. Completed a BAsc in Materials Engineering with Minors in Biomedical Engineering and Engineering Business. </p>
