Added github link and changed title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Ariel Seebarran's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,7 +46,7 @@
 								<h2 class="major">About me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Born and raised in Toronto. Completed a BAsc in Materials Engineering with Minors in Biomedical Engineering and Engineering Business. </p>
-								<p>Currently working in FinTech, building ML models to predict Capital Markets activities. Passionate about building products users actually enjoy using. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>Currently working in FinTech, building ML models to predict Capital Markets activities. Passionate about building products users actually enjoy using. By the way, check out my <a href="#work"> work</a>.</p>
 							</article>
 
 						<!-- Work -->
@@ -56,6 +56,8 @@
 								<p> Post-grad employment: Data Scientist at ION Group </p>
 								<p> Internships: Wyss Institute @ Harvard, Flexible Electronics and Energy Lab @ UofT</p>
 								<p> Engineering capstone: Association of Spaceflight Professionals</p>
+								<p></p>
+								<p> <a href="https://github.com/ariel-seebarran">Side projects</a></p>
 							</article>
 
 						<!-- Contact -->
