--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 								<h2 class="major">About me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Born and raised in Toronto. Completed a BAsc in Materials Engineering with Minors in Biomedical Engineering and Engineering Business. </p>
-								<p>Currently working in FinTech, building ML models to predict Capital Markets activities. Passionate about building products users actually enjoy using. By the way, check out my <a href="#work"> work</a>.</p>
+								<p>Currently working in FinTech, building ML models to predict Capital Markets activities. Passionate about building client-focused products and helping stakeholders make data-driven decisions. </p>
+								<p>Avid runner, rock climber, and cyclist.</p>
+								<p>For more about me, check out my <a href="#work"> work</a>.</p>
 							</article>
 
 						<!-- Work -->
