--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<!-- About Me -->
 							<article id="about-me">
 								<h2 class="major">About me</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/linkedin.png" alt="" /></span>
 								<p>Born and raised in Toronto. Completed a BAsc in Materials Engineering with Minors in Biomedical Engineering and Engineering Business. </p>
 								<p>Currently working in FinTech, building ML models to predict Capital Markets activities. Passionate about building client-focused products and helping stakeholders make data-driven decisions. </p>
 								<p>Avid runner, rock climber, and cyclist.</p>
@@ -60,6 +60,7 @@
 								<p> Engineering capstone: Association of Spaceflight Professionals</p>
 								<p></p>
 								<p> <a href="https://github.com/ariel-seebarran">Side projects</a></p>
+								<iframe src="files\Ariel Resume Spring 2023.pdf" width="500" height="700"></iframe>
 							</article>
 
 						<!-- Contact -->
