--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<!-- About Me -->
 							<article id="about-me">
 								<h2 class="major">About me</h2>
-								<span class="image main"><img src="images/linkedin.png" alt="" /></span>
+								<span class="image main"><img src="images/linkedin.png" alt="" style="max-width: 100%; height: auto;" /></span>
 								<p>Born and raised in Toronto. Completed a BAsc in Materials Engineering with Minors in Biomedical Engineering and Engineering Business. </p>
 								<p>Currently working in FinTech, building ML models to predict Capital Markets activities. Passionate about building client-focused products and helping stakeholders make data-driven decisions. </p>
 								<p>Avid runner, rock climber, and cyclist.</p>
